[web] [fix] dot alignment
Summary:
dot wasn't aligned with color splotch

{F38740}

{F38751}

Test Plan: send a new message, un read dot should be aligned

Reviewers: atul, def-au1t, yayabosh, palys-swm

Reviewed By: palys-swm

Subscribers: ashoat, palys-swm, Adrian, karol-bisztyga, yayabosh

Differential Revision: https://phabricator.ashoat.com/D3723

--- a/web/chat/chat-thread-list.css
+++ b/web/chat/chat-thread-list.css
@@ -98,9 +98,12 @@ div.colorContainer {
 
 div.spacer,
 div.colorSplotch {
-  height: 42px;
   width: 42px;
   border-radius: 1.68px;
+}
+div.colorSplotchContainer {
+  height: 42px;
+  display: flex;
 }
 div.lastActivity {
   font-size: var(--xxs-font-10);
